--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -33,26 +33,32 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+      
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
         env:
           GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
         with:
           args: detect --source . --verbose --redact --report-format json --report-path gitleaks-report.json --no-fail
-
+      
       - name: Count Gitleaks issues
         id: count
         run: |
-          GL_COUNT=$(gitleaks detect --source . --report-format json | jq 'length')
+          if [ -f gitleaks-report.json ]; then
+            GL_COUNT=$(jq 'length' gitleaks-report.json 2>/dev/null || echo 0)
+          else
+            GL_COUNT=0
+          fi
           echo "gl_count=$GL_COUNT" >> $GITHUB_OUTPUT
-
-
+          echo "Found $GL_COUNT secret(s)"
+      
       - name: Upload Gitleaks Report
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: gitleaks-report
           path: gitleaks-report.json
+          retention-days: 30
 
   ###########################################
   # 2. OWASP Dependency Check
@@ -64,25 +70,32 @@ jobs:
       dc_count: ${{ steps.count.outputs.dc_count }}
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Run OWASP Dependency-Check
         uses: dependency-check/Dependency-Check_Action@1.1.0
         with:
           project: "e-commerce-app"
           path: "./"
           format: "HTML"
-
+      
       - name: Count Dependency-Check issues
         id: count
         run: |
-          DC_COUNT=$(grep -i -c 'vulnerability' reports/*.html || echo 0)
+          if [ -d reports ] && [ -n "$(ls -A reports/*.html 2>/dev/null)" ]; then
+            DC_COUNT=$(grep -i -c 'vulnerability' reports/*.html || echo 0)
+          else
+            DC_COUNT=0
+          fi
           echo "dc_count=$DC_COUNT" >> $GITHUB_OUTPUT
-
-      - name: Upload Checkov Report
+          echo "Found $DC_COUNT vulnerability mention(s)"
+      
+      - name: Upload Dependency-Check Report
         uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: checkov-report
-          path: checkov-report.json
+          name: dependency-check-report
+          path: reports/
+          retention-days: 30
 
   ###########################################
   # 3. Checkov IaC Scan
@@ -94,28 +107,40 @@ jobs:
       ckv_count: ${{ steps.count.outputs.ckv_count }}
     steps:
       - uses: actions/checkout@v4
-
+      
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
+      
       - name: Install Checkov
         run: pip install checkov
-
+      
       - name: Run Checkov scan
-        run: checkov -d infrastructure --download-external-modules true --soft-fail -o json --output-file-path checkov-report.json
-
+        run: |
+          checkov -d infrastructure \
+            --download-external-modules true \
+            --soft-fail \
+            -o json \
+            --output-file-path checkov-report.json
+      
       - name: Count Checkov issues
         id: count
         run: |
-          CKV_COUNT=$(jq '.results.failed_checks | length' checkov-report.json 2>/dev/null || echo 0)
+          if [ -f checkov-report.json ]; then
+            CKV_COUNT=$(jq '.results.failed_checks | length' checkov-report.json 2>/dev/null || echo 0)
+          else
+            CKV_COUNT=0
+          fi
           echo "ckv_count=$CKV_COUNT" >> $GITHUB_OUTPUT
-
-      - name: Upload Dependency-Check Report
+          echo "Found $CKV_COUNT failed check(s)"
+      
+      - name: Upload Checkov Report
         uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: dependency-check-report
-          path: reports/*.html
+          name: checkov-report
+          path: checkov-report.json
+          retention-days: 30
 
   ###########################################
   # 4. SonarCloud Code Analysis
